--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-cast:18.1.0'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     implementation 'com.google.android.gms:play-services-ads:19.1.0'
-//    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-core:1.0.15'
-//    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-native:1.0.15'
-//    implementation 'com.google.android.gms:play-services:11.0.4'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
