--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'org.jsoup:jsoup:1.11.1'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 }
