--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,27 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GetVideoUrlActivity"></activity>
-        <activity android:name=".WebViewVideoDownload" />
+        <activity android:name=".SplashScreen"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".GetVideoUrlActivity" />
+        <activity android:name=".WebViewActivity" />
         <activity android:name=".AboutUs" />
         <activity android:name=".DownloadVideos" />
 
-        <service android:name=".DownloadService" />
+        <service android:name=".AudioService" />
 
         <activity
             android:name=".WhatsappVideoList"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".AudioVideoList" />
         <activity android:name=".AudioVideoFolders">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <provider
